# CV-Arun_Kishore

./: About.py  CV-develop.py  Curriculum_Vitae.py  Dockerfile  Dockerfile.backup  Dockerfile.bak  EDIT.env  README.md  build_docker_img-alexhost.sh  build_docker_img-local.sh  build_docker_img.sh  docker-compose-local.yml  docker-compose.yml  pyproject.toml  recreate-alexhost.sh  recreate-local.sh  requirements.txt  run.bat  test.py  timeline.json
.streamlit/: config.toml
assets/: timeline-test.json
pages/: 1_Base_Plate.py
portfolio/: __init__.py  about_me.py  career_timeline.py  certifications.py  footer.py  github.py  html.py  research.py  sidebar.py  timeline.json
projects/: template_project.py
