[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "portfolio"
authors = [{name = "Arun Kishore", email = "portfolio@rpakishore.co.in"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "streamlit>=1.12.0",
    "streamlit-timeline>=0.0.2",
    "streamlit-extras"
]

[project.urls]
Home = "https://github.com/rpakishore/portfolio"
